--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Bem-vindo ao site oficial da Barbearia do Gean! Aqui você encontra estilo, tradição e qualidade em cada corte.",
   "main": "index.js",
   "scripts": {
+    "start": "node crud.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
